# C-secure-authorize

./: .gitignore  CMakeLists.txt  base64.h  hash_list.h  jwt.c  jwt.h  main.c
